--- a/src/style/app.css
+++ b/src/style/app.css
@@ -57,11 +57,14 @@ table {
 .kit.is-plus, .detail_item.is-new {
   background-color: #9A4C2B; }
 
-.detail_item.is-selected, .item-selector {
+.detail_item.is-selected, .detail_header .item-selector {
   background-color: #6A9E39; }
 
-.kit, .detail_main, .detail_item, .detail_sidebar {
+.kit, .detail_main, .detail_item, .detail_sidebar, .detail_header .item-selector {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25); }
+
+a {
+  text-decoration: none; }
 
 body {
   margin: 0;
@@ -138,10 +141,10 @@ body {
     display: flex;
     text-align: center;
     justify-content: center;
-    width: 100%;
     color: #9EBCC7;
     height: 50px;
-    margin-top: auto; }
+    margin-top: auto;
+    padding: 0 10px; }
   .kit .sprite {
     align-self: center;
     margin-top: auto; }
@@ -197,32 +200,30 @@ body {
   .sprite.is-flow {
     background-position: -128px -288px; }
 
-.detail_main, .detail_sidebar {
-  border-radius: 4px;
-  max-width: 564px;
-  width: 100%;
-  overflow: hidden; }
-
 .detail {
   display: flex;
   width: 100%; }
   .detail_body {
     width: 100%;
-    max-width: 564px; }
+    max-width: 554px; }
   .detail_header {
     display: flex;
     align-items: center;
     height: 55px;
     position: relative;
     z-index: 10;
-    color: #9EBCC7; }
+    color: #9EBCC7;
+    border-radius: 4px 4px 0 0; }
     .detail_header .sprite {
       margin: 0 15px; }
+    .detail_header.is-new-item {
+      padding-left: 20px; }
   .detail_item-list {
     padding: 20px;
     padding-left: 12px;
     padding-bottom: 12px;
-    display: flex; }
+    display: flex;
+    flex-wrap: wrap; }
   .detail_item {
     width: 50px;
     height: 50px;
@@ -247,7 +248,9 @@ body {
         transform: translate(-50%, -50%) rotate(90deg); }
   .detail_sidebar {
     width: 100%;
-    margin-left: 20px; }
+    margin-left: 20px;
+    border-radius: 4px;
+    max-width: 466px; }
 
 .item_enchantments {
   padding: 20px;
@@ -315,20 +318,41 @@ body {
     transition: opacity 300ms ease-out; }
 
 .item-selector {
-  position: absolute;
   top: 100%;
-  padding: 0;
   max-width: 270px;
+  margin: 10px auto; }
+  .item-selector .sprite {
+    margin: 0;
+    margin-right: 13px;
+    cursor: pointer; }
+
+.detail_header .sprite {
+  cursor: pointer; }
+
+.detail_header .item-selector {
+  position: absolute;
+  padding: 0;
   opacity: 0;
   max-height: 0;
-  overflow: hidden; }
-  .item-selector.is-active {
+  overflow: hidden;
+  margin: 0;
+  border-radius: 0 0 4px 0; }
+  .detail_header .item-selector.is-active {
     opacity: 1;
     max-height: 340px;
     padding: 10px 0;
     padding-left: 12px;
     transition: opacity 100ms ease-out, max-height 300ms ease-out, padding 0ms 0ms; }
-  .item-selector .sprite {
-    margin: 0;
-    margin-right: 13px;
-    cursor: pointer; }
+
+.delete-button {
+  font-size: 14px;
+  color: #9EBCC7;
+  border: solid 1px #9EBCC7;
+  margin-left: auto;
+  margin-right: 12px;
+  padding: 8px;
+  cursor: pointer;
+  transition: all 150ms ease-in; }
+  .delete-button:hover {
+    background: #9A4C2B;
+    transition: all 300ms ease-out; }
