feat: Kit resume

--- a/src/style/app.sass
+++ b/src/style/app.sass
@@ -320,3 +320,24 @@ body
     &:hover
         background: #9A4C2B
         transition: all 300ms ease-out
+
+.kit-resume
+    @extend %dark-metal-bg
+    @extend %shadow
+    border-radius: 4px
+    color: white
+    padding: 12px
+    margin-top: 20px
+    &_line
+        display: flex
+        align-items: center
+        align-content: center
+        margin-bottom: 12px
+        .sprite
+            margin-right: 12px
+    &_title
+        height: 38px
+        line-height: 38px
+        text-align: center
+        color: #9EBCC7
+        margin-bottom: 20px
