--- a/src/style/app.css
+++ b/src/style/app.css
@@ -48,7 +48,7 @@ table {
 .detail_item {
   background-color: #19262B; }
 
-.detail_main, .detail_sidebar {
+.detail_main, .detail_sidebar, .kit-resume {
   background-color: #131D20; }
 
 .kit, .detail_header {
@@ -60,7 +60,7 @@ table {
 .detail_item.is-selected, .detail_header .item-selector {
   background-color: #6A9E39; }
 
-.kit, .detail_main, .detail_item, .detail_sidebar, .detail_header .item-selector {
+.kit, .detail_main, .detail_item, .detail_sidebar, .detail_header .item-selector, .kit-resume {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25); }
 
 a {
@@ -356,3 +356,22 @@ body {
   .delete-button:hover {
     background: #9A4C2B;
     transition: all 300ms ease-out; }
+
+.kit-resume {
+  border-radius: 4px;
+  color: white;
+  padding: 12px;
+  margin-top: 20px; }
+  .kit-resume_line {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 12px; }
+    .kit-resume_line .sprite {
+      margin-right: 12px; }
+  .kit-resume_title {
+    height: 38px;
+    line-height: 38px;
+    text-align: center;
+    color: #9EBCC7;
+    margin-bottom: 20px; }
