--- a/src/style/placeholders.sass
+++ b/src/style/placeholders.sass
@@ -1,3 +1,10 @@
+$gun-metal: #19262B
+$dark-metal: #131D20
+$forest-green: #3B8030
+$chestnut: #9A4C2B
+$redwood: #AB6959
+$aspargus: #6A9E39
+
 %gun-metal-bg
     background-color: #19262B
 %dark-metal-bg
